src/objects/IT_Component_Specification__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <description>This identifies the IT Component Type</description>
        <label>Asset Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Laptop</fullName>
                </value>
                <value>
                    <fullName>Monitor</fullName>
                </value>
                <value>
                    <fullName>Printer</fullName>
                </value>
                <value>
                    <fullName>Tablet</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bluetooth__c</fullName>
        <label>Bluetooth</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Identify the Brand of the Asset Product</description>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acer</fullName>
                </value>
                <value>
                    <fullName>Gateway</fullName>
                </value>
                <value>
                    <fullName>Packard Bell</fullName>
                </value>
                <value>
                    <fullName>Asus</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>Hewlett-Packard</fullName>
                </value>
                <value>
                    <fullName>Lenovo</fullName>
                </value>
                <value>
                    <fullName>Samsung Electronics</fullName>
                </value>
                <value>
                    <fullName>LG</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Canon</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>Konica Minolta</fullName>
                </value>
                <value>
                    <fullName>Kyocera</fullName>
                </value>
                <value>
                    <fullName>Lexmark</fullName>
                </value>
                <value>
                    <fullName>OKI</fullName>
                </value>
                <value>
                    <fullName>Olivetti</fullName>
                </value>
                <value>
                    <fullName>Ricoh</fullName>
                </value>
                <value>
                    <fullName>Samsung</fullName>
                </value>
                <value>
                    <fullName>Epson</fullName>
                </value>
                <value>
                    <fullName>TVS Electronics</fullName>
                </value>
                <value>
                    <fullName>Xerox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Graphic__c</fullName>
        <label>Graphic</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Component__c</fullName>
        <label>IT Component</label>
        <referenceTo>IT_Component__c</referenceTo>
        <relationshipLabel>IT Component Specifications</relationshipLabel>
        <relationshipName>IT_Component_Specifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Keyboard__c</fullName>
        <description>Identify if a Keyboard is included with the Overall Product</description>
        <label>Keyboard</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Included</fullName>
                </value>
                <value>
                    <fullName>Not Included</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mouse__c</fullName>
        <description>Identify if a mouse is included along with the Overall Product</description>
        <label>Mouse</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Included</fullName>
                </value>
                <value>
                    <fullName>Not Included</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <description>Identify what Office pack the Product comes with as standard (not including any software upgrades, which will be identified separately)</description>
        <label>Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2013 RT</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2003</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operating_System__c</fullName>
        <description>Identify the Windows Operating system installed on the Product</description>
        <label>Operating System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Windows 8.1</fullName>
                </value>
                <value>
                    <fullName>Windows 8</fullName>
                </value>
                <value>
                    <fullName>Windows 7</fullName>
                </value>
                <value>
                    <fullName>Windows Vista</fullName>
                </value>
                <value>
                    <fullName>Windows XP Professional x64</fullName>
                </value>
                <value>
                    <fullName>Windows XP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processor__c</fullName>
        <label>Processor</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Identify the Product Make and Model</description>
        <inlineHelpText>Identify the Product Make and Model</inlineHelpText>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ram__c</fullName>
        <label>Ram</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screen__c</fullName>
        <label>Screen Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>14 Inches</fullName>
                </value>
                <value>
                    <fullName>15 Inches</fullName>
                </value>
                <value>
                    <fullName>20 Inches</fullName>
                </value>
                <value>
                    <fullName>22 Inches</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage__c</fullName>
        <label>Storage</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Touchscreen__c</fullName>
        <label>Touchscreen</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Update_Cycle_Years__c</fullName>
        <description>Identify the period of time between standard upgrade cycles</description>
        <inlineHelpText>If no update cycle can be identified, use value 0</inlineHelpText>
        <label>Update Cycle (Years)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>IT Component Specification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>IT Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IT Component Specifications</pluralLabel>
    <recordTypes>
        <fullName>Laptop_Desktop</fullName>
        <active>true</active>
        <label>Laptop/Desktop</label>
    </recordTypes>
    <recordTypes>
        <fullName>Monitor</fullName>
        <active>true</active>
        <label>Monitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Phone</fullName>
        <active>true</active>
        <label>Phone</label>
    </recordTypes>
    <recordTypes>
        <fullName>Printer</fullName>
        <active>true</active>
        <label>Printer</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>